@@ -1,4 +1,7 @@
 0.2.6
+Fixed odd characters in tab name when truncated with elipses.
+Fixed crash when ctags gets confused and produces an enormous function name.
+Added 'Sort Tabs' to file menu.
 Fixed some minor encoding to UTF8 bugs.
 Fixed bug when loading certain html files.
 Fixed minor callback bug in prefs/plugin prefs.
